# rust-todo

./: .env.sample  Makefile  README.md  compose.yml  package.json  pnpm-lock.yaml  vercel.json
.github/ISSUE_TEMPLATE/: -feature-request-content.md  -story-issue-content.md  -task-issue-content.md
.github/workflow/: shuttle-deploy.yml  vercel-deploy.yml
.github/workflows/: shuttle-deploy.yml  vercel-deploy.yml
.husky/: pre-commit
app/: .prettierrc  Dockerfile  index.html  pnpm-lock.yaml
app/src/: main.tsx
app/src/components/: Authentication.tsx  Header.tsx  Navbar.tsx
app/src/pages/: Home.tsx
backend/: .gitignore  Cargo.toml
backend/migrations/: 20241029134221_init.sql  20241105110528_label.sql
backend/src/: handlers.rs  main.rs  repositories.rs
backend/src/handlers/: label.rs  todo.rs
backend/src/repositories/: label.rs  todo.rs
frontend/: package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/api/: label.ts  todo.ts
frontend/src/pages/: Hello.tsx  Home.tsx  Login.tsx  Shuttle.tsx  Todo.tsx
frontend/src/types/: todo.d.ts
worker/: package.json  wrangler.toml
worker/src/: index.ts
