[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend"
path = "src/main.rs"

[features]
default = ["database-test"]
database-test = []

[dependencies]
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.5.1"
mime = "0.3.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
http-body = "0.4.3"
validator = { version = "0.14.0", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres", "sqlx"] }
